# ipbwt

./: CMakeLists.txt  requirements.txt  version.h
dep/: libstatgen.cmake
src/: pbwt.h  pbwtCore.c  pbwtHtslib.c  pbwtIO.c  pbwtMain.c  pbwtMatch.c  pbwtSample.c
